[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/GroceryList.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/game/UIGroceryList.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/groceries/paper.svg" type="Texture" id=3]

[sub_resource type="SpatialMaterial" id=1]
flags_no_depth_test = true
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=2]
material = SubResource( 1 )
size = Vector2( 0.2, 0.4 )

[sub_resource type="QuadMesh" id=5]
size = Vector2( 0.2, 0.4 )

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=7]
resource_local_to_scene = true
flags_transparent = true
flags_no_depth_test = true
albedo_texture = SubResource( 6 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "all_done"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.0738603, 0 ), Vector3( 0, -0.0934827, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "start"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.1, 0 ), Vector3( 0, -0.0849865, 0 ), Vector3( 0, 0.09, 0 ), Vector3( 0, 0.0738603, 0 ) ]
}

[node name="GroceryList" type="Spatial"]
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 450, 900 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
gui_disable_input = true

[node name="UIGroceryList" parent="Viewport" instance=ExtResource( 2 )]

[node name="Sprite" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Sprite" type="MeshInstance" parent="Sprite"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.00629535 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/all_done = SubResource( 9 )
anims/start = SubResource( 10 )

[connection signal="all_items_picked_up" from="Viewport/UIGroceryList" to="." method="_on_UIGroceryList_all_items_picked_up"]
